@@ -1,13 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-_Name=About me
-_Comment=Information about myself
-Exec=gnome-about-me
-Icon=gnome-about-me.png
-Terminal=false
-Type=Application
-StartupNotify=true
-Categories=GNOME;Application;Settings;
-X-GNOME-Bugzilla-Bugzilla=GNOME
-X-GNOME-Bugzilla-Product=control-center
-X-GNOME-Bugzilla-Component=other-capplets
