@@ -1,3 +1,7 @@
+2005-07-08  Sebastien Bacher  <seb128@debian.org>
+
+	* gnome-about-me.desktop.in: this file is not useful on the CVS.
+
 2005-07-07  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-about-me-password.c: (wait_child):
